--- a/package.json
+++ b/package.json
@@ -5,16 +5,17 @@
   "author": "Takashi  nomura <ib65629@gmail.com>",
   "private": true,
   "scripts": {
-    "dev": "webpack-dev-server --inline --progress --config build/webpack.dev.conf.js",
+    "dev": "webpack-dev-server --https --inline --progress --config build/webpack.dev.conf.js",
     "start": "npm run dev",
     "lint": "eslint --ext .js,.vue src",
     "build": "node build/build.js"
   },
   "dependencies": {
+    "axios": "^0.18.0",
     "bootstrap": "^4.1.3",
     "bootstrap-vue": "^2.0.0-rc.11",
+    "url-join": "^4.0.0",
     "vue": "^2.5.2",
-    "vue-burger-menu": "^1.0.7",
     "vue-router": "^3.0.1"
   },
   "devDependencies": {
