--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "axios": "^0.18.0",
     "bootstrap": "^4.1.3",
     "bootstrap-vue": "^2.0.0-rc.11",
+    "less": "^3.8.1",
+    "less-loader": "^4.1.0",
     "url-join": "^4.0.0",
     "vue": "^2.5.2",
     "vue-router": "^3.0.1"
