--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "bootstrap-vue": "^2.0.0-rc.11",
     "less": "^3.8.1",
     "less-loader": "^4.1.0",
+    "lodash": "^4.17.11",
     "url-join": "^4.0.0",
     "vue": "^2.5.2",
     "vue-router": "^3.0.1"
