--- a/package.json
+++ b/package.json
@@ -14,12 +14,14 @@
     "axios": "^0.18.0",
     "bootstrap": "^4.1.3",
     "bootstrap-vue": "^2.0.0-rc.11",
+    "chart.js": "^2.7.3",
     "less": "^3.8.1",
     "less-loader": "^4.1.0",
     "lodash": "^4.17.11",
     "moment": "^2.22.2",
     "url-join": "^4.0.0",
     "vue": "^2.5.2",
+    "vue-chartjs": "^3.4.0",
     "vue-router": "^3.0.1",
     "vue-spinner": "^1.0.3"
   },
